--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-waitables",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "description": "Async data bindings for React",
   "keywords": [
     "async",
@@ -23,7 +23,7 @@
     "clean": "trash lib",
     "generate:docs": "npx typedoc src/index.ts",
     "lint": "eslint 'src/**/*.ts?(x)' --max-warnings 0",
-    "prepublishOnly": "yarn clean && yarn test && yarn audit && yarn clean && yarn build && yarn generate:docs",
+    "prepublishOnly": "yarn clean && yarn test && yarn lint && yarn audit && yarn clean && yarn build && yarn generate:docs",
     "test": "yarn test:check-circular-dependencies && yarn test:unit-tests",
     "test:check-circular-dependencies": "yarn build && npx madge --circular ./lib",
     "test:unit-tests:": "npx jest --runInBand --coverage",
@@ -36,9 +36,10 @@
   "dependencies": {
     "client-run-queue": "^1.1.7",
     "is-promise": "^4.0.0",
-    "react-bindings": "^1.2.4"
+    "react-bindings": "^1.3.3"
   },
   "devDependencies": {
+    "@testing-library/react" : "^13.3.0",
     "@types/jest": "^28.1.1",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
