--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-waitables",
-  "version": "1.5.7",
+  "version": "1.5.8",
   "description": "Async data bindings for React",
   "keywords": [
     "async",
@@ -18,14 +18,14 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "audit": "yarn audit --moderate",
     "build": "tsc -p tsconfig.build.json",
     "build:dev": "trash dev-build && yarn build && mkdir dev-build && cp -r lib dev-build && cp package.json dev-build && (cd dev-build && echo 'package' `pwd`)",
     "clean": "trash coverage dev-build docs lib",
     "generate:docs": "npx typedoc src/index.ts",
     "lint": "eslint 'src/**/*.ts?(x)' --max-warnings 0",
-    "prepublishOnly": "yarn clean && yarn test && yarn lint && yarn audit && yarn clean && yarn build && yarn generate:docs",
+    "prepublishOnly": "yarn clean && yarn test && yarn lint && yarn test:audit && yarn clean && yarn build && yarn generate:docs",
     "test": "yarn test:check-circular-dependencies && yarn test:unit-tests",
+    "test:audit": "yarn audit --level moderate; [[ $? -ge 4 ]] && exit 1 || exit 0",
     "test:check-circular-dependencies": "yarn build && npx madge --circular ./lib",
     "test:unit-tests:": "npx jest --runInBand --coverage",
     "test:unit-tests": "yarn test:unit-tests: src"
@@ -35,36 +35,36 @@
     "react-dom": ">=16.9.0"
   },
   "dependencies": {
-    "client-run-queue": "^1.1.10",
+    "client-run-queue": "^1.1.11",
     "is-promise": "^4.0.0",
-    "react-bindings": "^1.6.3"
+    "react-bindings": "^1.6.5"
   },
   "devDependencies": {
-    "@testing-library/react": "^13.3.0",
-    "@types/jest": "^28.1.7",
-    "@types/react": "18.0.17",
-    "@types/react-dom": "18.0.6",
-    "@typescript-eslint/eslint-plugin": "^5.34.0",
-    "@typescript-eslint/parser": "^5.34.0",
-    "eslint": "8.22.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-import-resolver-typescript": "^3.5.0",
+    "@testing-library/react": "^13.4.0",
+    "@types/jest": "^29.2.5",
+    "@types/react": "18.0.26",
+    "@types/react-dom": "18.0.10",
+    "@typescript-eslint/eslint-plugin": "^5.48.1",
+    "@typescript-eslint/parser": "^5.48.1",
+    "eslint": "8.31.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-import-resolver-typescript": "^3.5.2",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.5.0",
-    "eslint-plugin-simple-import-sort": "^7.0.0",
-    "eslint-plugin-tsdoc": "^0.2.16",
-    "jest": "28.1.3",
-    "jest-environment-jsdom": "^28.1.3",
+    "eslint-plugin-simple-import-sort": "^8.0.0",
+    "eslint-plugin-tsdoc": "^0.2.17",
+    "jest": "29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
     "madge": "5.0.1",
-    "prettier": "2.7.1",
+    "prettier": "2.8.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "trash-cli": "5.0.0",
-    "ts-jest": "^28.0.8",
-    "typedoc": "^0.23.10",
-    "typescript": "4.7.4"
+    "ts-jest": "^29.0.3",
+    "typedoc": "^0.23.24",
+    "typescript": "4.9.4"
   }
 }
