--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-waitables",
-  "version": "1.6.3",
+  "version": "1.7.0",
   "description": "Async data bindings for React",
   "keywords": [
     "async",
@@ -11,23 +11,24 @@
     "typescript",
     "waitables"
   ],
-  "main": "lib/index.js",
+  "main": "lib/cjs/index.js",
+  "module": "lib/mjs/index.js",
   "types": "lib/index.d.ts",
   "repository": "https://github.com/TypeScript-OSS/react-waitables.git",
   "homepage": "https://typescript-oss.github.io/react-waitables/",
   "license": "MIT",
   "private": false,
   "scripts": {
-    "build": "tsc -p tsconfig.build.json",
+    "build": "tsc -p tsconfig.cjs.json && tsc -p tsconfig.mjs.json",
     "build:dev": "trash dev-build && yarn build && mkdir dev-build && cp -r lib dev-build && cp package.json dev-build && (cd dev-build && echo 'package' `pwd`)",
     "clean": "trash coverage dev-build docs lib",
-    "generate:docs": "npx typedoc src/index.ts",
+    "generate:docs": "npx typedoc src/index.ts --skipErrorChecking",
     "lint": "eslint 'src/**/*.ts?(x)' --max-warnings 0",
     "prepublishOnly": "yarn clean && yarn test && yarn lint && yarn test:audit && yarn clean && yarn build && yarn generate:docs",
     "test": "yarn test:check-circular-dependencies && yarn test:unit-tests",
     "test:audit": "yarn audit --level moderate; [[ $? -ge 4 ]] && exit 1 || exit 0",
     "test:check-circular-dependencies": "yarn build && npx madge --circular ./lib",
-    "test:unit-tests:": "npx jest --runInBand --coverage",
+    "test:unit-tests:": "NODE_OPTIONS=--experimental-vm-modules npx jest --runInBand --coverage",
     "test:unit-tests": "yarn test:unit-tests: src"
   },
   "peerDependencies": {
@@ -35,20 +36,20 @@
     "react-dom": ">=16.9.0"
   },
   "dependencies": {
-    "client-run-queue": "^2.0.2",
+    "client-run-queue": "^2.1.0",
     "is-promise": "^4.0.0",
-    "react-bindings": "^1.9.1"
+    "react-bindings": "^1.10.1"
   },
   "devDependencies": {
     "@testing-library/react": "^14.0.0",
-    "@types/jest": "^29.4.4",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.55.0",
-    "@typescript-eslint/parser": "^5.55.0",
-    "eslint": "8.36.0",
-    "eslint-config-prettier": "^8.7.0",
-    "eslint-import-resolver-typescript": "^3.5.3",
+    "@types/jest": "^29.5.1",
+    "@types/react": "18.2.0",
+    "@types/react-dom": "18.2.1",
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
+    "@typescript-eslint/parser": "^5.59.2",
+    "eslint": "8.39.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "eslint-plugin-prettier": "^4.2.1",
@@ -59,12 +60,12 @@
     "jest": "29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "madge": "6.0.0",
-    "prettier": "2.8.4",
+    "prettier": "2.8.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "trash-cli": "5.0.0",
-    "ts-jest": "^29.0.5",
-    "typedoc": "^0.23.26",
-    "typescript": "4.9.5"
+    "ts-jest": "^29.1.0",
+    "typedoc": "^0.24.6",
+    "typescript": "5.0.4"
   }
 }
