--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-waitables",
-  "version": "1.8.2",
+  "version": "1.9.0",
   "description": "Async data bindings for React",
   "keywords": [
     "async",
@@ -38,16 +38,16 @@
   "dependencies": {
     "client-run-queue": "^2.1.1",
     "is-promise": "^4.0.0",
-    "react-bindings": "^1.13.2"
+    "react-bindings": "^1.14.0"
   },
   "devDependencies": {
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.2",
-    "@types/react": "18.2.12",
-    "@types/react-dom": "18.2.5",
-    "@typescript-eslint/eslint-plugin": "^5.59.11",
-    "@typescript-eslint/parser": "^5.59.11",
-    "eslint": "8.42.0",
+    "@types/react": "18.2.14",
+    "@types/react-dom": "18.2.6",
+    "@typescript-eslint/eslint-plugin": "^5.60.0",
+    "@typescript-eslint/parser": "^5.60.0",
+    "eslint": "8.43.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-import": "^2.27.5",
@@ -67,5 +67,11 @@
     "ts-jest": "^29.1.0",
     "typedoc": "^0.24.8",
     "typescript": "5.1.3"
+  },
+  "//resolutions": {
+    "semver": "7.5.3 due to https://www.npmjs.com/advisories/1092310 affecting dev dependencies (jest, @typescript-eslint/parser, @typescript-eslint/plugin, madge)"
+  },
+  "resolutions": {
+    "semver": "7.5.3"
   }
 }
