--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-waitables",
-  "version": "2.2.1",
+  "version": "2.2.2",
   "description": "Async data bindings for React",
   "keywords": [
     "async",
@@ -11,15 +11,19 @@
     "typescript",
     "waitables"
   ],
-  "main": "lib/cjs/exports.js",
-  "module": "lib/mjs/exports.js",
-  "types": "lib/exports.d.ts",
+  "main": "./lib/cjs/exports.js",
+  "module": "./lib/mjs/exports.mjs",
+  "exports": {
+    "import": "./lib/mjs/exports.mjs",
+    "require": "./lib/cjs/exports.js"
+  },
+  "types": "./lib/exports.d.ts",
   "repository": "https://github.com/TypeScript-OSS/react-waitables.git",
   "homepage": "https://typescript-oss.github.io/react-waitables/",
   "license": "MIT",
   "private": false,
   "scripts": {
-    "build": "tsc -p tsconfig.cjs.json && tsc -p tsconfig.mjs.json",
+    "build": "tsc -p tsconfig.cjs.json && node ./build.mjs",
     "build:dev": "trash dev-build && yarn build && mkdir dev-build && cp -r lib dev-build && cp package.json dev-build && (cd dev-build && echo 'package' `pwd`)",
     "clean": "trash coverage dev-build docs lib",
     "generate:docs": "npx typedoc src/exports.ts --skipErrorChecking",
@@ -36,9 +40,9 @@
     "react-dom": ">=16.9.0"
   },
   "dependencies": {
-    "client-run-queue": "^2.3.1",
+    "client-run-queue": "^2.3.2",
     "is-promise": "^4.0.0",
-    "react-bindings": "^1.19.1"
+    "react-bindings": "^1.19.3"
   },
   "devDependencies": {
     "@eslint/compat": "1.1.0",
@@ -51,6 +55,8 @@
     "@types/react-dom": "18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.14.1",
     "@typescript-eslint/parser": "^7.14.1",
+    "esbuild": "0.21.5",
+    "esbuild-plugin-tsc": "0.4.0",
     "eslint": "9.5.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
@@ -62,6 +68,7 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-simple-import-sort": "^12.1.0",
     "eslint-plugin-tsdoc": "^0.3.0",
+    "glob": "10.4.2",
     "jest": "29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "madge": "7.0.0",
@@ -70,7 +77,7 @@
     "react-dom": "18.3.1",
     "trash-cli": "5.0.0",
     "ts-jest": "^29.1.5",
-    "typedoc": "^0.26.2",
+    "typedoc": "^0.26.3",
     "typescript": "5.5.2"
   }
 }
